--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,10 @@
 
-$bgFooter: background-color(#ebd9cb);
-$bgHeader: background-color(#fff5ea);
-$bgMain:background-image(linear-gradient(to bottom, #fff9ed, #fef5e9, #fcf2e4, #fbeee0, #faeadc, #ddcfc2, #dfcbbc, #dac8ba, #d3c2b5, #c4b4a7, #b5a599));
-$fontFamily:font-family('Cormorant Garamond', serif);
-$fontColor: color(#837367);
-$fontColor2:color(#4e443c);
+$bgFooter:#e6dbd1;
+$bgHeader:#e6dbd1;
+$bgMain:linear-gradient(to bottom, #fff9ed, #fef5e9, #fcf2e4, #fbeee0, #faeadc, #ddcfc2, #dfcbbc, #dac8ba, #d3c2b5, #c4b4a7, #b5a599);
+$fontFamily:'Nuosu SIL', serif;
+$fontFamily2:'Open Sans', sans-serif;
+$fontFamily3: 'Playfair Display SC', serif;
+$fontFamily4:'Cormorant Garamond', serif;
+$fontColor:#837367;
+$fontColor2:#4e443c;
