--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,42 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nuosu+SIL&display=swap');
 @import "variables";
+@import "maps";
+@import "mixins";
+@import "headeryfooter";
 @import "mains";
 @import "mediaqueries";
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
- }
-
-/*HEADER*/
-.color{
-    background-color:$bgHeader;
-    .logo {
-        width: 100px;
-        height: 100px;
-    }
-    .div__nav{
-        margin-left: 40%;
-        .colorF {
-            color:$fontColor;
-            font-family:$fontFamily;
-            font-weight: bold;
-            font-size: large;
-        }
-    }
-}
-
-/*FOOTER*/
-.colorFot{
-    background-color:$bgFooter;
-    .div__fot{
-        text-align: center;
-        font-family:$fontFamily;
-        .div__a {
-            text-decoration: none;
-            color:$fontColor2;
-        }
-    }
-}
 
