--- a/scss/_mains.scss
+++ b/scss/_mains.scss
@@ -7,28 +7,8 @@
 /*ESTILOS COMPARTIDOS*/
 .main{
     background-color: map-get($mapa-colores,colormains);
+    overflow-x: hidden;
 }
-.portada{
-    @include medidas(100%,85vh);
-}
-.slogan{
-    background-color:map-get($mapa-colores,grisclaro);
-    @include font ($fontFamily,auto,#30190e);
-    @include medidas(40%,15%);
-    margin-top: 10%;
-    animation-duration: 2s;
-    animation-name: aparecer;
-    animation-iteration-count: 1;
-}
-.portada1{
-    @include medidas(95vw,65vh);
-    background-color:map-get($mapa-colores,marron);   
-}
-.portada2{
-    @include medidas(95vw,50vh);
-    background-color:map-get($mapa-colores,marron);   
-}
-
 /*EFECTOS*/
 @keyframes aparecer {
     0% {
@@ -38,146 +18,155 @@
         opacity: 1;
       }  
 }
-
 /*MAIN INDEX*/
-.video{
-    width: 90%;
+
+   /*Portada*/
+.carousel_1{
+    @include portada (100%,85vh,#cdc2bc);
+    .img_portada{
+        width: 500px;
+    }
 }
-.img_portada{
-    width: 80%;
-    padding-top: 5%;
-    margin-left: 10%;
+.carousel_2{
+    @include portada (100%,85vh,#c0bbb7);
+    .img_portada2{
+        width: 500px;
+        height: 450px;
+        margin-top: 6%;
+    }
 }
-.texto_publi1{
-    .core{
-        text-align: start;
-        margin-left: 10%;
-        @include font ($fontFamily3,auto,#30190e);
-        hr.style1{
+.texto_portada{
+        /*Estilos Portada1*/
+    .coresix_estilos{
+        hr.borde1_estilo{
             border-top: 1px solid #30190e;
         }
         .core_font{
-            font-size: 300%;
+            @include font ($fontFamily3,300%,#30190e);
+            text-align: start;
         }
+              
     }
-    
-    .devil{
-        @extend .core;
-        color:black;
-        hr.style2{
+           /*Estilos Portada2*/
+    .devilsnight_estilos{
+        hr.borde2_estilo{
             border-top: 1px solid  black;
         }
         .devil_font{
-            font-size: 300%;
+            @include font ($fontFamily3,300%,black);
+            text-align: start;  
         }
     }
+            /*Estilos Detalles*/
     .detalle{
         text-align: center;
-        margin-top: 5%;
-        .text_det{
-            @include font ($fontFamily2,large,#30190e);
-            padding-left: 10%;
+        .texto_detalle{
+            @include font ($fontFamily,large,#30190e);
         }
-        .button_det{
-            width: 30%;
-            @include font ($fontFamily3,larger,white);
+        .button_detalle{
             background-color: #30190e;
             border-radius: 5%;
-            margin-top: 10%;
-        }
-        .text_det2{
-            @include font ($fontFamily2,large,black);
-            padding-left: 10%;
-        }
-        .button_det2{
-            @include font ($fontFamily3,larger,white);
-            margin-top: 10%;
             width: 30%;
-            background-color: black;
-            border-radius: 5%;
+            @include font ($fontFamily3,medium,white);    
         }
-        
+        .texto_detalle2{
+            @extend .texto_detalle;
+            color: black;
+        }
+        .button_detalle2{
+            @extend .button_detalle;
+            background-color: black;
+        }
+    } 
+}
+   /*Section 1*/
+.video{
+    width: 90%;
+}
+.titulo_main{
+    text-decoration: none;
+    font-family:$fontFamily3;
+}
+.texto1_main{
+    @include font ($fontFamily,auto,black); 
+}
+  /*Section 2*/
+.section2_main{
+    background-color: #cdc2bc;
+    .titulo__section2{
+        text-align: center;
+        @include font ($fontFamily3,150%,black);
+    }
+    .imagen_section2 {
+        display: block;
+        @include medidas(400px,400px);
+    }
+    .container__section2 {
+        position: relative;
+        width: 50%;
+        &:hover {
+            .overlay {
+                opacity: 1;
+            }
+        }
+        .overlay {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            opacity: 0;
+            transition: .5s ease;
+            background-color: #c0bbb7;
+            @include medidas(400px,400px); 
+            .texto__section2 {
+                @include font ($fontFamily3,auto,$fontColor2);
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                -webkit-transform: translate(-50%, -50%);
+                -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+                text-align: center;
+            }  
+        }
     }
 }
-
-.publi1{
-    background-color: #cdc2bc;
-}
-.publi2{
-    background-color:#c0bbb7;
-}
-.img_portada2{
-    width: 75%;
-    margin-left: 20%;
-    padding: 5%;
-}
-
-.texto{
-    margin-right: 10%;
-    font-family:'Nuosu SIL', serif; 
-}
-.titulo1{
-    text-decoration: none;
-    font-family:'Playfair Display SC', serif;
-}    
-.container1 {
-	position: relative;
-	width: 50%;
-	&:hover {
-		.overlay {
-			opacity: 1;
-		}
-	}
-}
-.image {
-	display: block;
-    @include medidas(150%,auto);
-    margin-bottom: 10%;
-}
-.overlay {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-    @include medidas(150%,100%);
-	opacity: 0;
-	transition: .5s ease;
-	background-color: #c0bbb7;
-}
-.text2 {
-    @include font ($fontFamily3,auto,$fontColor2);
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	-ms-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-	text-align: center;
-}
-.h5_titulo{
-    text-align: center;
-    @include font ($fontFamily3,150%,black);
-}
-.div_marg{
-    margin-left: 9%;
-}
-.centered {
-    @include medidas(60%,10%);
-    position: absolute;
-    top: 50%;
-    left: 75%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    filter: opacity(0.7) ;
-    text-align: center; 
-}
-.h5_main{
-    @include font ($fontFamily3,200%,black);
-}
-
-
 /*MAIN PRODUCTOS*/
+
+/*Portada*/
+.portada__productos{
+    @include medidas(95vw,65vh);
+    background-color:map-get($mapa-colores,marron);
+    .intro_vela1{
+        text-align: center;
+        margin-top: 25%;
+        @include font ($fontFamily3,250%,#fff9ed);
+    }
+    .intro__vela2{
+        text-align: center;
+        font-size: 100%;
+        color: #fff9ed;
+    } 
+    .img__productos{
+        @include medidas(100%,100%) 
+    } 
+}
+/*Titulo de Colecciones*/
+.titulos{
+    @include font ($fontFamily,auto,#fff9ed);
+    background-color:#c0bbb7;
+    height: 10%;
+    animation-duration: 2s;
+    animation-name: aparecer;
+    animation-iteration-count: 1;
+    .intro_vela{
+        text-align: center;
+        font-size: 250%;
+        color:  #fff9ed;
+    }
+}
+/*Productos*/
 .img__velas {
     @include medidas(300px,300px);
 	transition: all .5s;
@@ -187,84 +176,82 @@
 	}
 }
 
-.img__prod{
-    @include medidas(100%,100%) 
-}
-.intro_vela{
-    text-align: center;
-    margin-bottom: 1%;
-    font-size: 250%;
-    color:  #fff9ed;
-
-}
-.intro_vela1{
-    text-align: center;
-    margin-top: 25%;
-    @include font ($fontFamily3,250%,#fff9ed);
-}
-.intro__vela2{
-    text-align: center;
-    font-size: 100%;
-    color: #fff9ed;
-}
-
-
 /*MAIN LOCALES*/
-.intro__locales{
-    @include font ($fontFamily3,auto,#fff9ed);
-    text-align: center;
-    margin-top: 20%;
-}
-.intro__locales2{
-    @include font ($fontFamily3,auto,#fff9ed);
-    text-align: center;
-    padding: 5%;
 
+/*Portada Locales*/
+.portada_locales{
+    @include medidas(95vw,50vh);
+    background-color:map-get($mapa-colores,marron);
+    .intro__locales{
+        @include font ($fontFamily3,auto,#fff9ed);
+        text-align: center;
+        margin-top: 20%;
+    }
+    .intro__locales2{
+        @include font ($fontFamily3,auto,#fff9ed);
+        text-align: center;
+        padding: 5%;
+    }   
 }
-.section__div_locales{
+/*Locales*/
+.section__locales{
     background-color: #c0bbb7;
-}
-.slogan2{
-    @include font ($fontFamily,auto,#fff9ed);
-    background-color:#c0bbb7;
-    height: 10%;
-    animation-duration: 2s;
-    animation-name: aparecer;
-    animation-iteration-count: 1;
-}
-.div__loc{
-    @include font ($fontFamily,auto,white);
-    background-color: #b7a597;
-}
-.try{
-    margin-left: 13%;
-    .try3{
+    .div__local{
+        margin-left: 13%;
+        .try3{
+            text-align: center;
+            .horarios{
+                font-weight: bold;
+            }
+        }
+    }
+    .img__local{
+        @include medidas(550px,550px)
+    }
+    .local_1{
+        background-color: #4f954f;
+        @include font ($fontFamily,auto,#fff9ed);
+        text-align: center;
+    }
+    .datos__locales{
         text-align: center;
         .horarios{
             font-weight: bold;
         }
     }
-}
-.local2{
-    margin-top: 5%;
-    padding-bottom: 5%;
-    .try4{
+    .local_2{
         background-color: #792f2f;
         @include font ($fontFamily,auto,#fff9ed);
         text-align: center;
     }
-}
-.try2{
-    background-color: #4f954f;
-    @include font ($fontFamily,auto,#fff9ed);
-    text-align: center;
-}
-.local1{
-    @include medidas(100%,100%)
+    
 }
 
+/*MAIN CONTACTO*/
 
-
+/*Portada*/
+.portada_contacto{
+    @include medidas (100%,85vh)
+}
+/*Introduccion*/
+.intro_contacto{
+    @include medidas (100%,15%);
+    @include font ($fontFamily,auto,white);
+    background-color:map-get($mapa-colores,marron);
+    margin-top: 10%;
+}
+.intro_contacto2{
+    @include font ($fontFamily,auto,black);
+}
+/*Formulario*/
+.prueba{
+    width: 50%;
+    margin-left: 25%;   
+    .prueba2{
+        background-color: #96887d;
+        @include font ($fontFamily,auto,white);
+    }
+}
 
 /*MAIN LOGIN*/
 .principal{
@@ -273,17 +260,7 @@
     text-align: center;
 }
 .img__log{
-    width: auto;
-}
-
-/*MAIN CONTACTO*/
-.prueba{
-    width: 50%;
-    margin-left: 25%;   
-    .prueba2{
-        background-color: #96887d;
-        @include font ($fontFamily4,auto,white);
-    }
+    @include medidas(400px,400px)
 }
 
 
